<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.institutoserpis.juanminm.calculadorasimple.MainActivity">

    <TextView
        android:id="@+id/activity_main_tv_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_txt_num1"
        android:textSize="24sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/activity_main_et_num1"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/activity_main_et_num1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/activity_main_hint_num1"
        android:inputType="number|numberSigned|numberDecimal"
        app:layout_constraintLeft_toRightOf="@+id/activity_main_tv_num1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/activity_main_tv_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_txt_num2"
        android:textSize="24sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/activity_main_et_num2"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/activity_main_et_num2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/activity_main_hint_num2"
        android:inputType="number|numberSigned|numberDecimal"
        app:layout_constraintLeft_toRightOf="@+id/activity_main_tv_num2"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_et_num1"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp" />

    <RadioGroup
        android:id="@+id/activity_main_rg_seleccionar_operacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_et_num2"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <RadioButton
            android:id="@+id/activity_main_rb_suma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/activity_main_txt_suma" />
        <RadioButton
            android:id="@+id/activity_main_rb_resta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/activity_main_txt_resta"/>

    </RadioGroup>

    <TextView
        android:id="@+id/activity_main_tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/activity_main_txt_resultado"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_rg_seleccionar_operacion" />

    <EditText
        android:id="@+id/activity_main_et_resultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:hint="@string/activity_main_hint_resultado"
        android:inputType="number|numberSigned|numberDecimal"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/activity_main_tv_resultado"
        app:layout_constraintLeft_toRightOf="@+id/activity_main_tv_resultado"
        app:layout_constraintRight_toLeftOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

</android.support.constraint.ConstraintLayout>
